--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -12,4 +12,8 @@
 @import 'partial/nav'; 
 @import 'partial/page-categoria';   
 @import 'partial/page-sitio';   
+@import 'partial/about-us';   
+@import 'partial/nav-colapse';   
+@import 'partial/search';   
+@import 'partial/footer';   
 @import 'partial/queries';   
