--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -80,7 +80,7 @@ a {
 			display: table;
 			font:{size: 11px;}
 			border:0;
-			border-bottom:1px solid $second_color_1;
+			border-bottom:1px solid $li-border-color;
 			padding:{top:8px;left:0;bottom:8px; right:0;}
 			text:{transform:uppercase;}
 			i {
@@ -90,7 +90,7 @@ a {
 				display: table-cell;
 				vertical-align: middle;
 				@include gridle_float(none);
-				color:$second_color_1;
+				color:$font-color;
 				font:{size: 15px;}
 				@include gridle_state(desktopess notebook-min){
 					width: 25px;
@@ -103,7 +103,7 @@ a {
 				@extend .no-paddings;
 				display: table-cell;
 				vertical-align: middle;
-				color:$second_color_1;
+				color:$font-color;
 			}
 			.metrics-2 {
 				@include gridle(4);
@@ -113,7 +113,7 @@ a {
 				@extend .no-paddings;
 				display: table-cell;
 				vertical-align: middle;
-				color:$second_color_1;
+				color:$font-color;
 			}
 		}
 		.img-map {
@@ -126,4 +126,21 @@ a {
 			}
 		}
 	}
+}
+.nothing-message {
+	@include gridle(12);
+	background:$second_color;
+	position: relative;
+	display: block;
+	margin:{top:10px;} 
+}
+.shadow {
+	box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
+	-webkit-box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
+	-moz-box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
+	-o-box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
+}
+@keyframes hover-btn {
+    0% {background-color:$first_color_3;}
+    100% {background-color: $first_color;}
 }
