--- a/prod/sass/partial/about-us.scss
+++ b/prod/sass/partial/about-us.scss
@@ -1,44 +1,101 @@
-.page-aboutus{
-	.encabezado {
-		@include gridle_state(desktopess notebook-min){
-			 height: 930px;
+.about-us-page {
+	@include gridle(12);
+	@extend .no-paddings;
+	.page-header {
+		display: none;
+	}
+	.page-aboutus{
+		@include gridle(10);
+		padding: 10px;
+		@include gridle(12, phoness tabless-min);
+		@include gridle_state(phoness tabless-min) {
+			padding:0;
 		}
-		.content-title {
-			@include gridle_state(desktopess notebook-min){
-			 display: block;
+		.encabezado {
+			background-size: cover;
+			@include gridle_state(desktopess) {
+				 height: 930px;
 			}
-			.logo-mediatrends {
-				@include gridle(11,phoness);
-				@include gridle(3, desktopess notebook-min tabless tabless-min);
-				@include gridle_float(none);
-				margin:0 auto 30px auto;
-				left:0;
-				right:0;
-				display: block;
-				a {
-					svg {
-						min-height: 200px;
+			@include gridle_state(notebook-min) {
+				  height: 841px;
+			}
+			@include gridle_state(tabless-md) {
+				  height: 644px;
+			}
+			@include gridle_state(tabless-min) {
+				  height: 777px;
+			}
+			.content-title {
+				@include gridle_state(desktopess notebook-min) { 
+				 display: block;
+				}
+				.logo-mediatrends {
+					@include gridle(3, desktopess tabless tabless-min);
+					@include gridle(4, notebook-min);
+					@include gridle(11,phoness);
+					@include gridle_float(none);
+					margin:0 auto 30px auto;
+					left:0;
+					right:0;
+					right: 0;
+					display: block;
+					@include gridle_state(desktopess) {
+						margin:{top:0;right:auto;bottom:30px;left: auto;}
+					}
+					@include gridle_state(notebook) {
+						margin:{top:0;right:auto;bottom:30px;left: auto;}
+					}
+					@include gridle_state(tabless-md) {
+						margin:{top:0;right:auto;bottom:30px;left: auto;}
+					}
+					a {
+						svg {
+							min-height: 200px;
+						}
+					}
+				}
+				h2 {
+					@include gridle(8, desktopess);
+					@include gridle(10,notebook-min);
+					@include gridle(11,phoness);
+					@include gridle_state(desktopess notebook-min) {
+						float:none;
+						margin:0 auto;
+						display: block;
+						padding:{left:0 !important;}
+					}
+					@include gridle_state(phoness tabless-min){
+						padding: 0 10px;
+					}
+				}
+				.bajada {
+					@include gridle(8, desktopess);
+					@include gridle(10, notebook-min); 
+					@include gridle(11,phoness);
+					@include gridle_state(desktopess notebook-min) {
+						float:none;
+						margin:0 auto;
+						display: block;
+						padding:{left:0;}
+					}
+					margin:{bottom:100px;}
+					p {
+						@include gridle_state(desktopess) {
+							line-height: 30px;
+							letter-spacing: 1px;
+						}
+						@include gridle_state(notebook-min) {
+							line-height: 23px;
+							font:{size: 13px;}
+						} 
+						@include gridle_state(phoness) {
+							padding: 0 10px;
+						}   
 					}
 				}
 			}
-			h2 {
-				@include gridle(8, desktopess notebook-min);
-				@include gridle_state(desktopess notebook-min){
-					float:none;
-					margin:0 auto;
-					display: block;
-					padding:{left:0 !important;}
-				}
-			}
-			.bajada {
-				@include gridle(8, desktopess notebook-min);
-				@include gridle_state(desktopess notebook-min){
-					float:none;
-					margin:0 auto;
-					display: block;
-				}
-				margin:{bottom:100px;}
-			}
 		}
-	}
-}
+	}	 
+}       
+
+
