--- a/app/wp-content/themes/mediakit/css/mediakit.css
+++ b/app/wp-content/themes/mediakit/css/mediakit.css
@@ -4805,7 +4805,7 @@ a {
   padding-left: 10px;
   padding-right: 10px;
   width: 100%;
-  height: 100% !important; }
+  height: 100%; }
   html.default .wrapper {
     float: left;
     direction: ltr;
@@ -4828,17 +4828,7 @@ a {
     content: "grid-default-12"; }
   .gridle-debug .wrapper.parent:before, .wrapper.gridle-debug.parent:before {
     content: "grid-parent-default-12"; }
-  html.phoness .wrapper {
-    height: auto !important; }
-  @media screen and (max-width: 800px) {
-    .wrapper {
-      height: auto !important; } }
   html.tabless-md .wrapper {
-    height: auto !important; }
-  @media screen and (max-width: 1024px) {
-    .wrapper {
-      height: auto !important; } }
-  html.tabless-min .wrapper {
     height: auto !important; }
   @media screen and (max-width: 1024px) {
     .wrapper {
@@ -4846,11 +4836,6 @@ a {
   html.notebook-min .wrapper {
     height: auto !important; }
   @media screen and (max-width: 1440px) {
-    .wrapper {
-      height: auto !important; } }
-  html.desktopess .wrapper {
-    height: auto !important; }
-  @media screen and (min-width: 1440px) {
     .wrapper {
       height: auto !important; } }
   .wrapper .highlight, .wrapper .highlight-inv, .wrapper .nav-colapse .menu ul li:first-child a, .nav-colapse .menu ul li:first-child .wrapper a, .wrapper .search-content .search-cont .search-loop .title-resultado .resultado-2 a, .search-content .search-cont .search-loop .title-resultado .resultado-2 .wrapper a, .wrapper .bajada {
@@ -5501,23 +5486,7 @@ a {
         font-size: 28px;
         padding-top: 8px; } }
 
-html.tabless-md .wrapper {
-  height: 100% !important; }
-@media screen and (max-width: 1024px) {
-  .wrapper {
-    height: 100% !important; } }
-html.tabless-min .wrapper {
-  height: 100% !important; }
-@media screen and (max-width: 1024px) {
-  .wrapper {
-    height: 100% !important; } }
-html.phoness .wrapper {
-  height: auto !important; }
-@media screen and (max-width: 800px) {
-  .wrapper {
-    height: auto !important; } }
 .wrapper .page-categoria {
-  height: 100%;
   float: left;
   direction: ltr;
   padding-left: 10px;
@@ -7346,7 +7315,8 @@ html.phoness .wrapper {
     padding-left: 10px;
     padding-right: 10px;
     width: 83.33333%;
-    padding: 10px; }
+    padding: 10px;
+    float: right; }
     html.default .about-us-page .page-aboutus {
       float: left;
       direction: ltr;
@@ -7369,6 +7339,8 @@ html.phoness .wrapper {
       content: "grid-default-10"; }
     .gridle-debug .about-us-page .page-aboutus.parent:before, .about-us-page .page-aboutus.gridle-debug.parent:before {
       content: "grid-parent-default-10"; }
+    html.default .about-us-page .page-aboutus {
+      float: right; }
     html.phoness .about-us-page .page-aboutus {
       width: 100%; }
       .gridle-debug html.phoness .about-us-page .page-aboutus:before, html.phoness .about-us-page .page-aboutus.gridle-debug:before {
@@ -7995,6 +7967,11 @@ html.phoness .wrapper {
       .nav-colapse .search .search-input:-ms-input-placeholder {
         color: #ffffff;
         font-family: "Open Sans", sans-serif; }
+      html.tabless-md .nav-colapse .search .search-input {
+        padding: 20px 10px; }
+      @media screen and (max-width: 1024px) {
+        .nav-colapse .search .search-input {
+          padding: 20px 10px; } }
     .nav-colapse .search .search-submit {
       float: left;
       direction: ltr;
