--- a/prod/sass/partial/about-us.scss
+++ b/prod/sass/partial/about-us.scss
@@ -7,47 +7,39 @@
 	.page-aboutus{
 		@include gridle(10);
 		padding: 10px;
+		height: 100%;
 		@include gridle_float(right);
 		@include gridle(12, phoness tabless-min);
 		@include gridle_state(phoness tabless-min) {
 			padding:0;
 		}
+		@include gridle_state(phoness) {
+			padding:{bottom:50px;}
+		}
 		.encabezado {
 			background-size: cover;
-			@include gridle_state(desktopess) {
-				 height: 930px;
-			}
-			@include gridle_state(notebook-min) {
-				  height: 841px;
-			}
-			@include gridle_state(tabless-md) {
-				  height: 644px;
-			}
-			@include gridle_state(tabless-min) {
-				  height: 777px;
+			height: 100%;
+			@include gridle_state(phoness) {
+				height: auto !important;
+				padding:{bottom: 50px;}
 			}
 			.content-title {
 				@include gridle_state(desktopess notebook-min) { 
 				 display: block;
+				 height: 100%;
 				}
 				.logo-mediatrends {
-					@include gridle(3, desktopess tabless tabless-min);
+					@include gridle(3, phoness desktopess tabless tabless-min);
 					@include gridle(4, notebook-min);
-					@include gridle(11,phoness);
+					@include gridle(7,phoness-min);
 					@include gridle_float(none);
-					margin:0 auto 30px auto;
+					margin:{top:0;right:auto;bottom:30px;left: auto;}
 					left:0;
 					right:0;
 					right: 0;
 					display: block;
-					@include gridle_state(desktopess) {
-						margin:{top:0;right:auto;bottom:30px;left: auto;}
-					}
-					@include gridle_state(notebook) {
-						margin:{top:0;right:auto;bottom:30px;left: auto;}
-					}
-					@include gridle_state(tabless-md) {
-						margin:{top:0;right:auto;bottom:30px;left: auto;}
+					@include gridle_state(phoness) {
+						margin:{bottom:0;}
 					}
 					a {
 						svg {
@@ -57,22 +49,25 @@
 				}
 				h2 {
 					@include gridle(8, desktopess);
-					@include gridle(10,notebook-min);
-					@include gridle(11,phoness);
+					@include gridle(10, notebook-min); 
+					@include gridle(11, phoness);
 					@include gridle_state(desktopess notebook-min) {
 						float:none;
 						margin:0 auto;
 						display: block;
 						padding:{left:0 !important;}
 					}
-					@include gridle_state(phoness tabless-min){
+					@include gridle_state(tabless-min) {
+						padding: 0 10px;
+					}
+					@include gridle_state(phoness) {
 						padding: 0 10px;
 					}
 				}
 				.bajada {
 					@include gridle(8, desktopess);
 					@include gridle(10, notebook-min); 
-					@include gridle(11,phoness);
+					@include gridle(11, phoness);
 					@include gridle_state(desktopess notebook-min) {
 						float:none;
 						margin:0 auto;
@@ -92,6 +87,10 @@
 						@include gridle_state(phoness) {
 							padding: 0 10px;
 						}   
+						@include gridle_state(phoness-min) {
+							line-height: 20px;
+							font:{size: 11px;} 
+						}
 					}
 				}
 			}
