--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -58,6 +58,9 @@ a {
 			font:{size:18px;}
 		}
 	}
+	&:hover {
+		@include animation(btn-general 1.5s ease-in);
+	}
 }
 .metrics {
 	@include gridle(12,phoness);
@@ -143,4 +146,23 @@ a {
 @keyframes hover-btn {
     0% {background-color:$first_color_3;}
     100% {background-color: $first_color;}
+}
+@keyframes btn-general {
+	0% {background-color:$first_color;}
+    100% {background-color: $first_color_2;}
+}
+.rotate-animation {
+	@include animation(icon-rotate 1.5s ease);
+}
+@keyframes icon-rotate {
+	0% {  
+		-ms-transform: rotate(0deg); /* IE 9 */
+		-webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+		transform: rotate(0deg); 
+	}
+	100% { 
+		-ms-transform: rotate(45deg); /* IE 9 */
+		-webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+		transform: rotate(45deg); 
+	}
 }
