--- a/app/wp-content/themes/mediakit/css/mediakit.css
+++ b/app/wp-content/themes/mediakit/css/mediakit.css
@@ -4824,21 +4824,39 @@ a {
     background-color: black; }
   100% {
     background-color: #2c2a29; } }
-.translate {
-  -webkit-animation: trans-1 1s ease-out;
-  -moz-animation: trans-1 1s ease-out;
-  animation: trans-1 1s ease-out; }
+.translate, .nav-mobile .menu-mobile #icon-mobile #fa-nav .uno {
+  -webkit-animation: trans-1 1s ease-out normal forwards;
+  -moz-animation: trans-1 1s ease-out normal forwards;
+  animation: trans-1 1s ease-out normal forwards; }
 
 @keyframes trans-1 {
   0% {
-    transform: translate(0, 0); }
+    transform: translate(0, 0);
+    transform: rotate(0deg);
+    transform-origin: center; }
+  50% {
+    transform: translate(0, 7px); }
   100% {
-    transform: translate(0, 7px); } }
+    transform: rotate(45deg);
+    transform-origin: 2px 10px; } }
+@keyframes trans-1-b {
+  100% {
+    transform: translate(0, 0);
+    transform: rotate(0deg);
+    transform-origin: center; }
+  50% {
+    transform: translate(0, -7px); }
+  0% {
+    transform: rotate(45deg);
+    transform-origin: -2px -10px; } }
 @keyframes trans-2 {
   0% {
-    transform: translate(0, 0); }
+    transform: translate(0, 0);
+    transform: rotate(0deg); }
+  50% {
+    transform: translate(0, -7px); }
   100% {
-    transform: translate(0, -7px); } }
+    transform: rotate(-45deg); } }
 .wrapper {
   background: #e7e7e7;
   position: relative;
@@ -4847,8 +4865,7 @@ a {
   padding-left: 10px;
   padding-right: 10px;
   width: 100%;
-  height: 100% !important;
-  overflow: hidden; }
+  height: 100% !important; }
   html.default .wrapper {
     float: left;
     direction: ltr;
@@ -4871,6 +4888,16 @@ a {
     content: "grid-default-12"; }
   .gridle-debug .wrapper.parent:before, .wrapper.gridle-debug.parent:before {
     content: "grid-parent-default-12"; }
+  html.phoness .wrapper {
+    overflow: hidden; }
+  @media screen and (max-width: 800px) {
+    .wrapper {
+      overflow: hidden; } }
+  html.tabless-min .wrapper {
+    overflow: hidden; }
+  @media screen and (max-width: 1024px) {
+    .wrapper {
+      overflow: hidden; } }
   .wrapper .page-header {
     float: left;
     direction: ltr;
@@ -5495,6 +5522,10 @@ a {
         position: absolute;
         top: 0;
         right: 0; }
+        .nav-mobile .menu-mobile #icon-mobile #fa-nav .uno-b {
+          -webkit-animation: trans-1-b 1s ease-out normal forwards;
+          -moz-animation: trans-1-b 1s ease-out normal forwards;
+          animation: trans-1-b 1s ease-out normal forwards; }
 
 .wrapper .page-categoria {
   float: left;
