--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -156,6 +156,8 @@ a {
 	-moz-box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
 	-o-box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
 }
+
+
 @keyframes hover-btn {
     0% {background-color:$first_color_3;}
     100% {background-color: $first_color;}
@@ -165,13 +167,20 @@ a {
     100% {background-color: $first_color_2;}
 }
 .translate {
-	@include animation(trans-1 1.0s ease-out);	
+	@include animation(trans-1 1.0s ease-out normal forwards);	
 }
 @keyframes trans-1 {
-  	0% { transform: translate(0, 0); }
-  	100% { transform: translate(0, 7px); }
+  	0% { transform: translate(0, 0);transform:rotate(0deg);transform-origin:center; }
+  	50% { transform: translate(0, 7px); }
+  	100%{ transform:rotate(45deg);transform-origin:2px 10px;}
+}
+@keyframes trans-1-b {
+  	100% { transform: translate(0, 0);transform:rotate(0deg);transform-origin:center; }
+  	50% { transform: translate(0, -7px); }
+  	0%{ transform:rotate(45deg);transform-origin:-2px -10px;}
 }
 @keyframes trans-2 {
-  	0% { transform: translate(0, 0); }
-  	100% { transform: translate(0, -7px); }
+  	0% { transform: translate(0, 0);transform:rotate(0deg); }
+  	50% { transform: translate(0, -7px); }
+  	100%{ transform:rotate(-45deg);}
 }
