--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -4,7 +4,9 @@
 	@include gridle(12);
 	@extend .no-paddings;
 	height: 100% !important;
-	overflow:hidden;
+	@include gridle_state(phoness tabless-min){
+		overflow:hidden;
+	}
 	.page-header {
 		@include gridle(10, desktopess notebook-min);
 		@include gridle(12, phoness phoness-min tabless-min);
