menu animation top and parallax

--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -8,6 +8,7 @@
 @include gridle_generate_classes();
 
 @import 'partial/vars';
+@import 'partial/parallax';
 @import 'partial/general';   
 @import 'partial/header'; 
 @import 'partial/nav'; 
