--- a/prod/sass/partial/nav.scss
+++ b/prod/sass/partial/nav.scss
@@ -35,6 +35,7 @@
 		height: 40px;
 	}
  	.logo-mobile {
+ 		height: 40px;
 		@include gridle(2,tabless-min);
 		@include gridle_state(tabless-min) {
 			  padding: 7px 10px;
@@ -52,18 +53,17 @@
 			padding:{left:0;right:20px;}
 			svg {
 				width: 100%;
-				height: auto;
+				height: 40px;
 				min-height: 40px;
 			}
 		}
 	}
 	.menu-mobile {
-		@include gridle(1,tabless-md);
-		@include gridle(1,tabless-min);
-		@include gridle(2,phoness);
 		@include gridle_float(right);
 		text:{align:center;} 
-		padding:{top:5px;}
+		padding:{top:4px;}
+		height: 35px;
+		width: 35px;
 		@include gridle_state(tabless-md) {
 			text:{align: right;}
 		}
@@ -73,20 +73,24 @@
 		#icon-mobile {
 			position: relative;
 			#fa-nav {
-				position: absolute;
-				top:0;
-				right: 0;
 				.uno{
-					@extend .translate;
+					@include animation(trans-1 0.5s ease-out normal forwards);	
 				}
 				.uno-b{
-					@include animation(trans-1-b 1.0s ease-out normal forwards);
+					@include animation(trans-1-b 0.5s ease-out normal forwards);
 				}
-				#dos{
-
+				.dos{
+					@include animation(trans-2 0.5s ease-out normal forwards);
 				}
-				#tres{
+				.dos-b {
+					@include animation(trans-2-b 0.5s ease-out normal forwards);  
+				}
+				.tres{
+					@include animation(trans-3 0.5s ease-out normal forwards);
 				}	
+				.tres-b{
+					@include animation(trans-3-b 0.5s ease-out normal forwards);
+				}   
 			}
 		}
 	}
